--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<p style="font-size:30px;" class=p3>BE<br>MINDFUL<br>&<br>PRESENT<br></p>
 						<p class=p8>Fully embrace the<br>here and now, and<br>focus on what matters<br>most.</p>
 						<div class=box3>
-						<a href="./Be_mindful_and_present.html" style="text-decoration: none;color: inherit;">
+						<a href="./index.html" style="text-decoration: none;color: inherit;">
 							<p style="color:white;font-family: 'Avenir', Helvetica, sans-serif;" align=center>Learn<br>More</p>
 						</a>
 					</div>
@@ -64,7 +64,7 @@
 						<p style="font-size:30px" class=p3>BE TOGETHER</p>
 						<p class=p8>Fully embrace the<br>here and now, and<br>focus on what matters<br>most.</p>
 						<div class=box3>
-						<a href="./Be_Together.html" style="text-decoration: none;color: inherit;">
+						<a href="./index.html" style="text-decoration: none;color: inherit;">
 						<p style="background-color: pink;color:black;font-family: 'Avenir', Helvetica, sans-serif;" align=center>Learn<br>More</p>
 						</a>
 					</div>
@@ -74,7 +74,7 @@
 						<p style="font-size:30px" class=p3>BE<br>NOURISHED</p>
 						<p class=p8>Enriching your mind, body<br>and spirit.</p>
 						<div class=box3>
-						<a href="./Be_Nourished.html" style="text-decoration: none;color: inherit;">
+						<a href="./index.html" style="text-decoration: none;color: inherit;">
 							<p style="color:white;font-family: 'Avenir', Helvetica, sans-serif;" align=center>Learn<br>More</p>
 						</a>
 					</div>
@@ -104,7 +104,7 @@
 					<p class=p3 style="color:black"><b>Featured Property<br></b></p>
 					<p class=p4 style="color:black">JW MARRIOTT LOS CABOS<br></p>
 					<p class=p8 style="color:black">Embrace an unrivaled ocean escape at JW Marriott Los Cabos Beach Resort<br>& Spa. In San Jose del Cabo, where the Sea of Cortez meets the Pacific<br>Ocean, our resort is the perfect place to soak up the sun in sophisticated<br>style.</p>
-					<div class="box5"><br><a href="https://www.marriott.com/hotels/travel/sjdjw-jw-marriott-los-cabos-beach-resort-and-spa/" style="font-family: 'Avenir', Helvetica, sans-serif; font-color:"white"">Stroll the Surf</a>
+					<div class="box5"><br><a href="https://www.marriott.com/hotels/travel/sjdjw-jw-marriott-los-cabos-beach-resort-and-spa/" target = "_blank" style="font-family: 'Avenir', Helvetica, sans-serif; font-color:"white"">Stroll the Surf</a>
 					</div>
 				</td>
 				</div>
@@ -136,7 +136,7 @@
 					<p class=p3 style="color:black"><b>JWM Magazine<br></b></p>
 					<p class=p4 style="color:black">THE ROAD TO<br>WELL-BEING<br></p>
 					<p class=p8 style="color:black">JW chefs share secrets to the best<br>ingredients, multi-generational family travel<br>and more.</p>
-					<a href="./magazin.html" style="margin-left: 40px;font-family: 'Avenir', Helvetica, sans-serif; color:"red"">Read about it in the JW Magazine</a>
+					<a href="./index.html" style="margin-left: 40px;font-family: 'Avenir', Helvetica, sans-serif; color:"red"">Read about it in the JW Magazine</a>
 				</td>
 				<td>
 					<img src=./cup.png alt="John Doe" width=250 height="175">
@@ -144,7 +144,7 @@
 						<p class=p3 style="color:black"><b>JW Luxuries<br></b></p>
 						<p class=p4 style="color:black">FROM OUR<br>COLLECTION TO<br>YOURS<br></p>
 						<p class=p8 style="color:black">Experience the culture, design and polished<br>comfort of our world-renowned hotels with<br>the JW Marriott home collection.</p>
-						<a href="https://www.curatedbyjw.com/index.aspx" style="margin-left: 40px;font-family: 'Avenir', Helvetica, sans-serif; color:"red"">Shop JW Luxuries</a>
+						<a href="https://www.curatedbyjw.com/index.aspx" target = "_blank" style="margin-left: 40px;font-family: 'Avenir', Helvetica, sans-serif; color:"red"">Shop JW Luxuries</a>
 					</td>
 				</td>
 			</table>
