--- a/wedding.html
+++ b/wedding.html
@@ -171,7 +171,7 @@ p.djjj
     <tr>
       <td>
       <a href="./index.html">
-        <img class=logo src=../Veeram/logo.png width="196.5" height="65.5">
+        <img class=logo src=./logo.png width="196.5" height="65.5">
       </a>
     </td>
     <td>
