--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</a>
 			</td>
 			<td>
-				<a href="../J/termsandcondition.html">
+				<a href="./termsandcondition.html">
 					<b><p style="color:black; font-size:12px;" class=p3>TERMS AND CONDITIONS</p></b>
 				</a>
 			</td>
