--- a/join_now.html
+++ b/join_now.html
@@ -7,7 +7,7 @@
 			<tr>
 				<td>
 				<a href="./index.html">
-					<img class=logo src=./logo.png width="196.5" height="65.5">
+					<img class=logo src="./logo.png" width="196.5" height="65.5">
 				</a>
 			</td>
 			<td>
@@ -303,18 +303,18 @@
 				<tr><td class=td2 style="font-size:13px"><p>By signing up, I agree to Marriott's<a href='https://www.marriott.com/about/terms-of-use-modal.mi'
 				style="color:red"> Terms of Use</a> and Marriott Bonvoy<br><a href='https://www.marriott.com/loyalty/terms.mi'
 				style="color:red"> Terms and Conditions</a>. I also acknowledge Marriott's Privacy Statement located<br> in the
-				<a href='https://www.marriott.com/marriott/privacy-modal.mi' style="color:red">Privacy Center and the
-				<a href='https://www.marriott.com/about/ccpa/modal.mi' style="color:red">California Notice of Financial Incentive.
+				<a href='https://www.marriott.com/marriott/privacy-modal.mi' target = "_blank" style="color:red">Privacy Center and the
+				<a href='https://www.marriott.com/about/ccpa/modal.mi' target = "_blank" style="color:red">California Notice of Financial Incentive.
 				</p></td></tr>
 				<tr><td class=td3><input type=submit value=Join></td>
 				<td class=td3><input type=reset value=Cancel></td></tr>
 			</table>
-				<p class=p2 align=right>Already a Member? <a href='https://www.marriott.com/rewards/createAccount/activateAccountChallenge.mi'
+				<p class=p2 align=right>Already a Member? <a href='https://www.marriott.com/rewards/createAccount/activateAccountChallenge.mi' target = "_blank" 
 				style="color:red">Activate online account</p></a>
 				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 				<img src=./app_image.png align=left width=345 height=144 style="padding:20px">
 				<br><br>
-				<a href=https://marriott.app.link/tdEAPp3Hy4><p class=p2 align=right>LEARN MORE</a></p>
+				<a href='https://marriott.app.link/tdEAPp3Hy4' target = "_blank"><p class=p2 align=right>LEARN MORE</a></p>
 				<b><p class=p6 align=centre>It's all right here with the Marriott Bonvoy App</p></b>
 </body>
 
