--- a/termsandcondition.html
+++ b/termsandcondition.html
@@ -65,7 +65,7 @@ margin-left:100px;
     <tr>
       <td>
       <a href="./index.html">
-        <img class=logo src=./logo.png width="196.5" height="65.5">
+        <img class=logo src="./logo.png" width="196.5" height="65.5">
       </a>
     </td>
     <td>
