--- a/covidpage.html
+++ b/covidpage.html
@@ -40,7 +40,7 @@ color:white;text-align:center;font-family:"Arial";font-size:50;
     <tr>
       <td>
       <a href="./index.html">
-        <img class=logo src=./logo.png width="196.5" height="65.5">
+        <img class=logo src="./logo.png" width="196.5" height="65.5">
       </a>
     </td>
     <td>
