--- a/garden.html
+++ b/garden.html
@@ -7,7 +7,7 @@
 			<tr>
 				<td>
 				<a href="./index.html">
-					<img class=logo src=./logo.png width="196.5" height="65.5">
+					<img class=logo src="./logo.png" width="196.5" height="65.5">
 				</a>
 			</td>
 			<td>
