--- a/heritagepage.html
+++ b/heritagepage.html
@@ -70,7 +70,7 @@ font-family: "Proxima-Nova", sans-serif;
     <tr>
       <td>
       <a href="./index.html">
-        <img class=logo src=./logo.png width="196.5" height="65.5">
+        <img class=logo src="./logo.png" width="196.5" height="65.5">
       </a>
     </td>
     <td>
